# flask_task_backend

./: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  makefile  pyproject.toml
backend/: app.py  commands.py  database.py
backend/task/: models.py  serializers.py  views.py
config/: settings.py
envs/nginx/: nginx.conf
envs/uwsgi/: app.ini
migrations/versions/: 263b245dff00_.py
tests/: conftest.py  settings.py
tests/task/: test_api.py  test_model.py  test_serializers.py
