[tool.poetry]
name = "coding_exercise"
version = "0.1.0"
description = ""
authors = ["Ken Yang"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1"
environs = "^9.3.2"
Flask-SQLAlchemy = "^2.5.1"
pymysql = "^1.0.2"
marshmallow = "^3.12.1"
Flask-Migrate = "^3.0.1"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
